Resolves colour contrast issue on subscribe button

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .navbar{
-    background-color:rgb(252, 237, 219);
+    background-color:#fceddb;
 }
 
 nav ul li a:hover{
@@ -33,7 +33,7 @@ nav ul li a:hover{
     outline: rgb(0, 143, 95);
 }
 
-  .newsletter p{
+.newsletter p{
     width:30%;
     align-self: center;
 }
@@ -69,16 +69,17 @@ nav ul li a:hover{
 .standard-button{
     font-size:20px;
     padding: 5px;
-    border: 2px solid rgb(0,143,95);
+    border: 2px solid #006641;
     border-radius: 5px;
     color: #fff;
     max-height: 55px;
-    background-color: rgb(0,143,95);
+    background-color: #006641;
 }
 
 .standard-button:hover{
-    border:2px solid rgb(6, 87, 60);
-    background-color: rgb(6, 87, 60);
+    border:2px solid #006641;
+    background-color: #008f5f;
+    color: #fff;
 }
 
 .modal-button{
